Fetch repair shop data from firebase & then show to user in home screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,8 +73,11 @@ dependencies {
     // Add the dependency for the Firebase SDK for Google Analytics
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
+    implementation 'com.google.firebase:firebase-storage-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
+
+    implementation "io.coil-kt:coil-compose:2.4.0"
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
