--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
@@ -78,6 +77,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
     implementation "io.coil-kt:coil-compose:2.4.0"
+
+    implementation "com.google.accompanist:accompanist-permissions:0.25.1"
+
+    implementation "androidx.camera:camera-camera2:1.2.3"
+    implementation "androidx.camera:camera-lifecycle:1.2.3"
+    implementation 'androidx.camera:camera-view:1.2.3'
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
