--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ buildscript {
     dependencies {
         // Add the dependency for the Google services Gradle plugin
         classpath 'com.google.gms:google-services:4.3.15'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+        classpath "com.android.tools.build:gradle:7.0.2"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
