--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,5 +84,8 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:1.2.3"
     implementation 'androidx.camera:camera-view:1.2.3'
 
+    implementation 'com.google.maps.android:maps-compose:2.11.4'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
