--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/path_provider" />
         </provider>
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBSwanfuf-RLoHng0i8k3-QvLIVkmXNWhQ"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
