--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,16 @@
         android:theme="@style/Theme.Befine"
         tools:targetApi="31">
         <activity
-            android:name=".LocationPicker"
-            android:exported="false" />
+            android:name=".SplashActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/SplashScreenTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -52,11 +60,6 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Befine">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="com.adevinta.leku.LocationPickerActivity"
