--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,5 +103,7 @@ dependencies {
     implementation "com.squareup.moshi:moshi:1.14.0"
     implementation "com.squareup.moshi:moshi-kotlin:1.14.0"
 
+    implementation "androidx.compose.runtime:runtime-livedata:1.0.0-beta01"
+
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
